--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -18,6 +18,25 @@
 	<string>SOD vendor</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
+	<key>io.flutter.embedded_views_preview</key>
+    <string>YES</string>
+    <key>CFBundleShortVersionString</key>
+    <string>1.0.0</string>
+    <key>CFBundleSignature</key>
+    <string>????</string>
+    <key>CFBundleURLTypes</key>
+    <array>
+    	<dict>
+    		<key>CFBundleTypeRole</key>
+    		<string>Editor</string>
+    		<key>CFBundleURLName</key>
+    		<string>Bundle id</string>
+    		<key>CFBundleURLSchemes</key>
+    		<array>
+    			<string>com.app.entemarket</string>
+    		</array>
+    	</dict>
+    </array>
 	<key>CFBundleShortVersionString</key>
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
@@ -42,7 +61,9 @@
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>This app requires access to Location of user to get nearby vendors</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>This app requires access to Location of user to deliver their orders</string>
+	<string>This app requires access to Location of user to to show you nearby points of interest</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>This app needs access to your location to show you nearby points of interest, even when the app is not in use.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This require listens for speech on the device microphone on your request for voice search.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
