--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,12 +7,14 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA"/>
-    
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+
    <application
         android:label="SOD Vendor"
         android:icon="@mipmap/launcher_icon">
        <meta-data android:name="com.google.android.geo.API_KEY"
            android:value="AIzaSyB0uPBgryG9RisP8_0v50Meds1ZePMwsoY"/>
+<!--               "AIzaSyB0uPBgryG9RisP8_0v50Meds1ZePMwsoY"/>-->
 
         <activity
             android:name="MainActivity"
