--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -83,11 +83,11 @@ dependencies:
   flutter_native_image:
 #  razorpay_flutter: ^1.3.3
   curved_navigation_bar: ^1.0.3
-  pinput: ^2.2.16
   flutter_launcher_icons: ^0.11.0
   geocoding: ^2.0.5
   google_fonts: ^3.0.1
   share_plus: ^6.3.0
+  pinput: ^2.2.31
   loading_animation_widget: ^1.2.0+4
   url_launcher: ^6.1.7
   flutter_share: ^2.0.0
@@ -105,10 +105,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+dependency_overrides:
+  modal_bottom_sheet: ^3.0.0-pre
+  file: ^6.1.4
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/launcher_icon.png"
+  image_path: "images/logo.png"
+  remove_alpha_ios: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
